# MATLAB_codegen_example

./: CMakeLists.txt  README.md
include/: errorR.h  errorR_blas.h  rtwtypes.h
lib/: errorR.c  errorR_blas.c
src/: main.cpp
